<resources>
    <string name="app_name">imHungry</string>
    <string name="login_text">Login</string>
    <string name="forget_pw">please enter email</string>
    <string name="delete_acc">Are you sure you want to delete the user?
If so it is necessary to verify the connection</string>
    <string name="nextStep" translatable="false">Next Step</string>
    <string name="register_text">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">Don\'t have an account? Signup Here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mr">Mr</string>
    <string name="ms">Mis</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="phone" translatable="false">Phone</string>
    <string name="top_rate" translatable="false">Top Rate</string>
    <string name="top_watch" translatable="false">Top Watch</string>
    <string name="new_recipes" translatable="false">New Recipes</string>
    <string name="home" translatable="false">Home</string>
    <string name="workshop" translatable="false">Workshop</string>
    <string name="delete_recipe">are you sure that you want to delete this recipe?</string>
    <string name="createWorkshop" translatable="false">Create Workshop</string>
    <string name="inbox" translatable="false">Inbox</string>
    <string name="createRecipe" translatable="false">Create Recipe</string>
    <string name="classLocation" translatable="false">Class Location</string>
    <string name="kilo">kg</string>
    <string name="gram">g</string>
    <string name="liter">L</string>
    <string name="mililiter">ml</string>
    <string name="teaspoon">tsp</string>
    <string name="tablespoon">tbsp</string>
    <string name="cup">cup</string>
    <string name="picess" translatable="false">pcs</string>
    <string name="chose_error" >you must chose scale... </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="make_in_workshop" translatable="false">What will we prepare in the workshop</string>
    <string name="join_to_workshop" translatable="false">join to workshop</string>
    <string name="setting">Setting</string>
    <string name="setting_dialog">To enter this page, you must verify again</string>
    <string name="change_pss_btn">change password</string>
    <string name="text" translatable="false">Become a real Belgian chocolate maker in about 2 and a half hours!
  We provide you everything you need: cookware, ingredients  recipes. With assistance from start to end you dont need any previous cooking experience to attend the chocolate workshop. Kids (min 12 years old) accompanied by at least one participating adult are welcome too.
After a short introduction, we will go through the whole process, split into teams and start tempering the chocolate!</string>
    <string name="name_workshop" translatable="false">name of the workshop</string>
    <string name="description_workshop" translatable="false">Description</string>
    <string name="amount_of_people_workshop" translatable="false">Amount of people</string>
    <string name="date_workshop" translatable="false">Date</string>
    <string name="time_workshop" translatable="false">Time</string>
    <string name="start_time_workshop" translatable="false">Start</string>
    <string name="end_time_workshop" translatable="false">End</string>
    <string name="location_workshop" translatable="false">location</string>
    <string name="price_workshop" translatable="false">Price</string>
    <string name="upload_workshop" translatable="false">upload</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="by" translatable="false"> By </string>
    <string name="join" translatable="false">join</string>
    <string name="workshop_full" translatable="false">The workshop is full</string>
    <string name="remove_join" translatable="false">unsubscribe</string>
    <string name="edit" translatable="false">edit</string>
    <string name="name_recpie" translatable="false">Name recipe</string>
    <string name="created_by" translatable="false">Created by</string>
    <string name="time_to_make" translatable="false">Time make</string>
    <string name="like" translatable="false">Like</string>
    <string-array name="ingredients">
        <item>ביצים</item>
        <item>פילה בקר</item>
        <item>אנטריקוט</item>
        <item>בשר טחון</item>
        <item>אסאדו</item>
        <item>כנפיים</item>
        <item>חזה עוף</item>
        <item>לבבות עוף</item>
        <item>קורקבנים</item>
        <item>נקנקיות</item>
        <item>פרגיות</item>
        <item>עוף שלם</item>
        <item>צלעות כבש</item>
        <item>צלעות טלה</item>
        <item>מושט ענק</item>
        <item>דניס</item>
        <item>בורי ענק</item>
        <item>סלמון פרוסות  עם העצם</item>
        <item>פילה סלמון</item>
        <item>סי בס</item>
        <item>מוסר ים</item>
        <item>לברק</item>
        <item>פורל</item>
        <item>בר ים</item>
        <item>מעורבי ים</item>
        <item>ברבוניה</item>
        <item>פילה טונה אדומה</item>
        <item>לוקוס לבן</item>
        <item>אנטיאס</item>
        <item>קרפייון</item>
        <item>סרדין</item>
        <item>מליטה</item>
        <item>פלמידה לבנה</item>
        <item>ילו טייל האמצי</item>
        <item>אגוז מוסקט</item>
        <item>אורגנו</item>
        <item>אזובית</item>
        <item>ארוגול הרוקט</item>
        <item>בזיליקום</item>
        <item>בצל</item>
        <item>בצלצל</item>
        <item>הל</item>
        <item>זנגוויל–ג׳ינג׳ר</item>
        <item>זעפרן</item>
        <item>חילבה</item>
        <item>חרדל</item>
        <item>טרגון–לענהדרקונית</item>
        <item>טימין–קורנית</item>
        <item>כוסברה–גד</item>
        <item>כורכום</item>
        <item>כמון</item>
        <item>כרפס–סלרי</item>
        <item>כרוויה</item>
        <item>מייס</item>
        <item>מלח</item>
        <item>מלח לימון</item>
        <item>נענע</item>
        <item>עלידפנה</item>
        <item>פטרוזיליה</item>
        <item>פלפל שחור</item>
        <item>פלפל לבן</item>
        <item>פלפל אדום</item>
        <item>פלפל אנגלי</item>
        <item>פפריקה</item>
        <item>פרג</item>
        <item>ציפורן</item>
        <item>צלפים</item>
        <item>צ’ילי</item>
        <item>קארי</item>
        <item>קינמון</item>
        <item>קימל</item>
        <item>קמומיל</item>
        <item>רוזמרין</item>
        <item>שום</item>
        <item>שומשום</item>
        <item>שומר</item>
        <item>שמיר</item>
        <item>מרווה</item>
        <item>וניל</item>
        <item>אבוקדו</item>
        <item>אורגנו</item>
        <item>אורוגולה</item>
        <item>​אמרנט(</item>
        <item>​אספרגוס</item>
        <item>​ארטישוק</item>
        <item>​ארטישוק ירושלמי</item>
        <item>​בוקצוי</item>
        <item>​בזיליקום</item>
        <item>​בטטה</item>
        <item>​במיה</item>
        <item>​בצל ירוק</item>
        <item>​ברוקולי</item>
        <item>​גזר</item>
        <item>​גזר לבן</item>
        <item>​גינגר</item>
        <item>​גמבה</item>
        <item>​דלורית</item>
        <item>​דלעת</item>
        <item>​חסה</item>
        <item>​חציל</item>
        <item>​טימין</item>
        <item>​טרגון</item>
        <item>​כוסברה</item>
        <item>​כרוב</item>
        <item>​כרוב ניצנים</item>
        <item>​כרובית</item>
        <item>​כרשה</item>
        <item>​לבבותדקל</item>
        <item>​לואיזה</item>
        <item>​לפת</item>
        <item>​מליסה</item>
        <item>​מלפפון</item>
        <item>​מנגולד</item>
        <item>​מרווה</item>
        <item>נבטי אלפלפא</item>
        <item>נענע</item>
        <item>סלק</item>
        <item>סלרי</item>
        <item>עגבנייה</item>
        <item>עירית</item>
        <item>עשבלימון</item>
        <item>פטרוזיליה</item>
        <item>פטרייתפורטבלו</item>
        <item>צנון</item>
        <item>צנוןדייקון</item>
        <item>קולורבי</item>
        <item>קייל</item>
        <item>קישוא</item>
        <item>רוזמרין</item>
        <item>שום</item>
        <item>שומר</item>
        <item>שמיר</item>
        <item>תירס</item>
        <item>תפוח אדמה</item>
        <item>תרד</item>
        <item>דבש</item>
        <item>צילי מתוק</item>
        <item>רוטב סויה</item>
        <item>צילי חריף</item>
        <item>קורנפלור</item>
        <item>קמח</item>
        <item>טחינה</item>
        <item>רסק עגבניות</item>
        <item>סילאן</item>
        <item>שמרים יבשים</item>
        <item>מים</item>
        <item>שמן קנולה</item>
        <item>שמן זית</item>
        <item>טריאקי</item>

    </string-array>
    <string name="who_In" translatable="false">Who is in the workshop</string>
    <string name="title_activity_create_recipe" translatable="false">asa</string>
    <string name="steps" translatable="false">Step</string>
    <string name="search_ingredients" translatable="false">Enter search ingredients</string>
    <string name="description_step" translatable="false">Step description </string>
    <string name="description_recipe" translatable="false">Recipe description </string>
    <string name="preparationTimePicker" translatable="false">Preparation Time </string>
    <string name="details" translatable="false">Details recipe</string>
    <string name="Beef" translatable="false">Beef</string>
    <string name="Chicken" translatable="false">Chicken</string>
    <string name="Fish" translatable="false">Fish</string>
    <string name="Pasta" translatable="false">Pasta</string>
    <string name="Soups" translatable="false">Soups</string>
    <string name="Salads" translatable="false">Salads</string>
    <string name="Cakes" translatable="false">Cakes</string>
    <string name="Cookies" translatable="false">Cookies</string>
    <string name="pizza" translatable="false">pizza</string>
    <string name="Bread" translatable="false">Bread</string>
    <string name="vegetarian" translatable="false">vegetarian</string>
    <string name="DipsSpread" translatable="false">Spread</string>
    <string name="amount" translatable="false">Amount</string>
    <string name="more" translatable="false">More >></string>
    <string name="recipeDay" translatable="false">Todays recipe</string>
    <string name="ingredientsContain" translatable="false">contain only the ingredients</string>
    <string name="ingredientsOnlyContain" translatable="false">contain the ingredients</string>
    <string name="askDelete" translatable="false">Are you sure you want to delete this item?</string>
    <string name="onList" translatable="false">The product is on the list</string>
    <string name="nameRecipe" translatable="false">Name Recipe</string>
    <string-array name="category">
        <item>Beef</item>
        <item>Chicken</item>
        <item>Fish</item>
        <item>Pasta</item>
        <item>Soups</item>
        <item>Salads</item>
        <item>Cakes</item>
        <item>Cookies</item>
        <item>pizza</item>
        <item>Bread</item>
        <item>vegetarian</item>
        <item>Spread</item>
    </string-array>
    <string name="searchRecipeName" translatable="false">Enter the recipe name</string>
    <string name="repassword" translatable="false">Repeat Password</string>
    <string name="search" translatable="false">Search</string>
    <string name="getOut" translatable="false">
Are you sure that you want get out from this page , all the data you inputed will gone
</string>
</resources>