<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Beef"
        android:title="@string/Beef" />
    <item
        android:id="@+id/Chicken"
        android:title="@string/Chicken" />
    <item
        android:id="@+id/Fish"
        android:title="@string/Fish" />
    <item
        android:id="@+id/Pasta"
        android:title="@string/Pasta" />
    <item
        android:id="@+id/Soups"
        android:title="@string/Soups" />
    <item
        android:id="@+id/Salads"
        android:title="@string/Salads" />
    <item
        android:id="@+id/Cakes"
        android:title="@string/Cakes" />
    <item
        android:id="@+id/Cookies"
        android:title="@string/Cookies" />
    <item
        android:id="@+id/pizza"
        android:title="@string/pizza" />
    <item
        android:id="@+id/Bread"
        android:title="@string/Bread" />
    <item
        android:id="@+id/vegetarian"
        android:title="@string/vegetarian" />
    <item
        android:id="@+id/DipsSpread"
        android:title="@string/DipsSpread" />
</menu>