<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activity.Register.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/backround_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center">
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/logo">

             </ImageView>
         </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:id="@+id/regInfo_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <TextView
                android:id="@+id/email_et_xml"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fname_et_xml"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/first_name"
                android:maxLength="15"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/lname_et_xml"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/last_name"
                android:maxLength="15"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gender_et_xml"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/city"
                android:maxLength="15"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phone_et_xml"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/bdate_et_xml"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:ems="10"
                android:hint="@string/date_of_birth"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:textAlignment="center"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:ems="10"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/man_radio_xml"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_weight="1.0"
                        android:text="@string/mr"
                        android:textStyle="bold"
                        android:theme="@style/RadioButtonStyle" />

                    <RadioButton
                        android:id="@+id/woman_radio_xml"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:layout_weight="1.0"
                        android:text="@string/ms"
                        android:textStyle="bold"
                        android:theme="@style/RadioButtonStyle" />
                </RadioGroup>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/regInfo_ll">

                <Button
                    android:id="@+id/send_btn_xml"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/mybutton"
                    android:elevation="3dp"
                    android:shadowColor="#000"
                    android:shadowDx="1"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/register_text"
                    android:textColor="#FFFFFB"
                    android:textSize="20dp"
                    android:textStyle="bold"></Button>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>